hphp/hack/test/typecheck/xhp_nullable_required.php
<?hh // strict

class :foo {
  attribute
    int foo @required,
    ?int bar @required;
}
